--- a/src/main/resources/assets/gregicalityoreaddon/lang/en_us.lang
+++ b/src/main/resources/assets/gregicalityoreaddon/lang/en_us.lang
@@ -29,10 +29,49 @@ metaitem.minor_amblygonite_residue.name=Minor Amblygonite Residue
 
 metaitem.beryllium_aluminium_sulfate.name=Beryllium Aluminium Sulfate
 metaitem.ammonium_alum.name=Ammonium Alum
-metaitem.sodium_fluorosilicilate=Sodium Fluorosilicilate
+metaitem.sodium_fluorosilicilate.name=Sodium Fluorosilicilate
 metaitem.beryllium_hydroxide.name=Beryllium Hydroxide
+fluid.sodium_fluoroberyllate=Sodium Fluoroberyllate
 
 metaitem.pb_cu_bi_oxides_mix.name=Lead Copper Bismuth Oxides
 metaitem.well_mixed_pb_bi_oxides.name=Well Mixed Lead Bismuth Oxides
 metaitem.calcium_plumbide.name=Calcium Plumbide
 metaitem.calcium_bismuth_alloy.name=Calcium Bismuth Alloy
+metaitem.cupric_oxide.name=Cupric Oxide
+
+metaitem.roasted_carnotite.name=Roasted Carnotite
+
+metaitem.nickel_rare_residue.name=Nickel Rare Residue
+metaitem.nickel_sulfate_precipitate.name=Nickel Sulfate Precipitate
+metaitem.copper_free_nickel_sulfate=Copper-Free Nickel Sulfide
+metaitem.nickel_sulfide.name=Nickel Sulfide
+metaitem.cobalt_sulfide.name=Cobalt Sulfide
+fluid.nickel_sulfuric_solution=Nickel Sulfuric Solution
+fluid.arsenic_solution=Sodium Arsenate Sulfuric Solution
+fluid.ammonia_metal_sulfate_solution=Ammonia Metal Sulfate Solution
+
+metaitem.cu_sn_fe_oxides_mix.name=Copper Tin Iron Oxides Mixture
+metaitem.tin_copper_mix.name=Tin Copper Mixture
+metaitem.impure_tin_dust=Impure Tin Dust
+metaitem.iron_silicate_residue=Iron Silicate Residue
+
+metaitem.gold_telluride.name=Gold Telluride
+fluid.thiourea.name=Thiourea
+fluid.gold_thiourea_solution=Gold Thiourea Solution
+
+metaitem.thorium_sulfate.name=Thorium Sulfate
+metaitem.thorium_fluoride.name=Thorium Fluoride
+fluid.molten_calcium_salts=Molten Calcium Salts
+fluid.rare_earth_sulfate_solution=Rare Earth Sulfate Solution
+
+metaitem.roasted_rheniite.name=Roasted Rheniite
+metaitem.ree_filtered_rheniite_residual_oxides.name=REE-Filtered Rheniite Residual Oxides
+metaitem.rheniite_residual_oxides.name=Rheniite Residual Oxides
+metaitem.leucine.name=Leucine
+fluid.used_rhenium_separation_mixture=Used Rhenium Separation Mixture
+
+metaitem.sodium_zirconate.name=Sodium Zirconate
+metaitem.zirconium_hydrogenphosphate.name=Zirconium Hydrogenphosphate
+fluid.zinc_vanadyl_sulfate_solution=Zinc Vanadyl Sulfate Solution
+metaitem.lead_sulfate.name=Lead Sulfate
+metaitem.copper_sulfate.name=Copper Sulfide
